--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -8,11 +8,11 @@ idna==3.4
 imagesize==1.4.1
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+myst-parser==2.0.0 
 packaging==23.1
 Pygments==2.16.1
 pyparsing==3.1.1
 pytz==2023.3.post1
-recommonmark==0.7.1
 requests==2.31.0
 snowballstemmer==2.2.0
 Sphinx==6.2.1
