--- a/examples/authors/sqlc.yaml
+++ b/examples/authors/sqlc.yaml
@@ -6,8 +6,9 @@ sql:
   queries: postgresql/query.sql
   engine: postgresql
   database:
-    analyzer: false
     managed: true
+  analyzer:
+    database: false
   rules:
   - sqlc/db-prepare
   - postgresql-query-too-costly
