--- a/examples/authors/sqlc.yaml
+++ b/examples/authors/sqlc.yaml
@@ -15,6 +15,7 @@ sql:
   gen:
     go:
       package: authors
+      sql_package: pgx/v5
       out: postgresql
 - schema: mysql/schema.sql
   queries: mysql/query.sql
