test: Bump timeout to 20 minutes

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
       run: go install ./...
 
     - name: test ./...
-      run: gotestsum --junitfile junit.xml -- --tags=examples ./...
+      run: gotestsum --junitfile junit.xml -- --tags=examples -timeout 20m ./...
       env:
         MYSQL_DATABASE: mysql
         MYSQL_HOST: localhost
