build(deps): Upgrade wasmtime-go from 13.0.0 to 14.0.0
This upgrade should fix the broken Windows build.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,12 +6,10 @@ on:
   pull_request:
 jobs:
   windows-build:
-    if: ${{ github.ref == 'refs/heads/main' }}
+    # if: ${{ github.ref == 'refs/heads/main' }}
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v4
-    # wasmtime can't be built with 12.2
-    - run: choco install mingw --version 11.2.0.07112021 --allow-downgrade
     - uses: actions/setup-go@v4
       with:
         go-version: '1.21.3'
