Fix testdata build

--- a/internal/endtoend/testdata/overrides_config/v2/yaml/global/sqlc.yaml
+++ b/internal/endtoend/testdata/overrides_config/v2/yaml/global/sqlc.yaml
@@ -5,11 +5,11 @@ overrides:
       one: "ONE"
     overrides:
       - db_type: "text"
-        go_type: "config/global.Text"
+        go_type: "github.com/sqlc-dev/sqlc-testdata/pkg.CustomType"
       - column: "overrides.three"
         go_type:
-          import: "config/global"
-          type: "Three"
+          import: "github.com/sqlc-dev/sqlc-testdata/pkg"
+          type: "CustomType"
 sql:
 - schema: "../../../schema.sql"
   queries: "../../../query.sql"
