--- a/.github/workflows/gen.yml
+++ b/.github/workflows/gen.yml
@@ -20,7 +20,8 @@ jobs:
     - uses: actions/checkout@v4
     - uses: actions/setup-go@v4
       with:
-        go-version: '1.21.4'
+        go-version-file: go.mod
+        cache-dependency-path: go.sum
     - run: go build -o sqlc-pg-gen ./internal/tools/sqlc-pg-gen
     - run: mkdir -p gen/contrib
     - run: ./sqlc-pg-gen gen
