--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     - uses: actions/setup-go@v4
       with:
         go-version-file: go.mod
-        cache-dependency-path: go.sum
+        check-latest: true
     - run: go build ./...
 
   darwin-build:
@@ -24,7 +24,7 @@ jobs:
     - uses: actions/setup-go@v4
       with:
         go-version-file: go.mod
-        cache-dependency-path: go.sum
+        check-latest: true
     - run: go build ./...
 
   build:
@@ -46,7 +46,7 @@ jobs:
     - uses: actions/setup-go@v4
       with:
         go-version-file: go.mod
-        cache-dependency-path: go.sum
+        check-latest: true
 
     - name: install gotestsum
       run: go install gotest.tools/gotestsum@latest
@@ -81,6 +81,6 @@ jobs:
     - uses: actions/setup-go@v4
       with:
         go-version-file: go.mod
-        cache-dependency-path: go.sum
+        check-latest: true
     - run: go install golang.org/x/vuln/cmd/govulncheck@latest
     - run: govulncheck ./...
