--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,8 @@ jobs:
     - uses: actions/checkout@v4
     - uses: actions/setup-go@v4
       with:
-        go-version: '1.21.4'
+        go-version-file: go.mod
+        check-latest: true
     - run: go build ./...
 
   darwin-build:
@@ -22,7 +23,8 @@ jobs:
     - uses: actions/checkout@v4
     - uses: actions/setup-go@v4
       with:
-        go-version: '1.21.4'
+        go-version-file: go.mod
+        check-latest: true
     - run: go build ./...
 
   build:
@@ -43,7 +45,8 @@ jobs:
     - uses: actions/checkout@v4
     - uses: actions/setup-go@v4
       with:
-        go-version: '1.21.4'
+        go-version-file: go.mod
+        check-latest: true
 
     - name: install gotestsum
       run: go install gotest.tools/gotestsum@latest
@@ -77,6 +80,7 @@ jobs:
     - uses: actions/checkout@v4
     - uses: actions/setup-go@v4
       with:
-        go-version: '1.21.4'
+        go-version-file: go.mod
+        check-latest: true
     - run: go install golang.org/x/vuln/cmd/govulncheck@latest
     - run: govulncheck ./...
