--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -1,27 +1,28 @@
-alabaster==0.7.13
 Babel==2.13.1
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+Pygments==2.17.1
+Sphinx==6.2.1
+alabaster==0.7.13
 certifi==2023.11.17
 chardet==5.2.0
 commonmark==0.9.1
 docutils==0.18.1
 idna==3.4
 imagesize==1.4.1
-Jinja2==3.1.2
-MarkupSafe==2.1.3
 myst-parser==2.0.0 
 packaging==23.2
-Pygments==2.17.1
 pyparsing==3.1.1
 pytz==2023.3.post1
 requests==2.31.0
 snowballstemmer==2.2.0
-Sphinx==6.2.1
 sphinx-favicon==1.0.1
 sphinx-rtd-theme==1.3.0
 sphinxcontrib-applehelp==1.0.7
 sphinxcontrib-devhelp==1.0.5
-sphinxcontrib-serializinghtml==1.1.9
 sphinxcontrib-htmlhelp==2.0.4
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==1.0.6
+sphinxcontrib-serializinghtml==1.1.9
+sphinxext-rediraffe==0.2.7
 urllib3==2.1.0
