--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
       - main
   pull_request:
 jobs:
-  windows-test:
+  windows-build:
     if: ${{ github.ref == 'refs/heads/main' }}
     runs-on: windows-latest
     steps:
@@ -15,13 +15,9 @@ jobs:
         go-version-file: go.mod
         check-latest: true
 
-    - name: install sqlc-gen-test
-      run: go install github.com/sqlc-dev/sqlc-gen-test@v0.1.0
-
-    - name: install ./...
-      run: go install ./...
-
-    - run: go test ./...
+    # Currently some tests rely on line endings so we only build
+    # without running.
+    - run: go build ./...
 
   darwin-test:
     if: ${{ github.ref == 'refs/heads/main' }}
