--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,61 +5,22 @@ on:
       - main
   pull_request:
 jobs:
-  windows-build:
-    if: ${{ github.ref == 'refs/heads/main' }}
-    runs-on: windows-latest
-    steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-go@v4
-      with:
-        go-version-file: go.mod
-        check-latest: true
-
-    # Currently some tests rely on line endings so we only build
-    # without running.
-    - run: go build ./...
-
-  darwin-test:
-    if: ${{ github.ref == 'refs/heads/main' }}
-    runs-on: macos-latest
-    steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-go@v4
-      with:
-        go-version-file: go.mod
-        check-latest: true
-
-    - name: install sqlc-gen-test
-      run: go install github.com/sqlc-dev/sqlc-gen-test@v0.1.0
-
-    - name: install ./...
-      run: go install ./...
-
-    - run: go test ./...
-
-  linux-purego-test:
-    if: ${{ github.ref == 'refs/heads/main' }}
-    runs-on: macos-latest
-    steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-go@v4
-      with:
-        go-version-file: go.mod
-        check-latest: true
-
-    - name: install sqlc-gen-test
-      run: go install github.com/sqlc-dev/sqlc-gen-test@v0.1.0
-
-    - name: install ./...
-      run: go install ./...
-
-    - run: go test ./...
-      env:
-        CGO_ENABLED: '0'
-
-  build:
-    name: test
-    runs-on: ubuntu-latest
+  test:
+    strategy:
+      max-parallel: 2
+      matrix:
+        os: [windows-latest, macos-latest, ubuntu-latest]
+        cgo: ['1', '0']
+        # Workaround no proper support for conditional matrix items
+        # https://github.com/orgs/community/discussions/26253#discussioncomment-6745038
+        isMain: ${{ github.ref == 'refs/heads/main' }}
+        exclude:
+          - { isMain: false }
+        include:
+          - { os: ubuntu-latest, cgo: '1' }
+          - { os: ubuntu-latest, cgo: '0' }
+    name: Test ${{ matrix.os }}-cgo${{ matrix.cgo }}
+    runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v4
@@ -76,10 +37,14 @@ jobs:
 
     - name: install ./...
       run: go install ./...
+      env:
+        CGO_ENABLED: ${{ matrix.cgo }}
 
     - name: build internal/endtoend
       run: go build ./...
       working-directory: internal/endtoend/testdata
+      env:
+        CGO_ENABLED: ${{ matrix.cgo }}
 
     - name: test ./...
       run: gotestsum --junitfile junit.xml -- --tags=examples -timeout 20m ./...
@@ -87,6 +52,7 @@ jobs:
         CI_SQLC_PROJECT_ID: ${{ secrets.CI_SQLC_PROJECT_ID }}
         CI_SQLC_AUTH_TOKEN: ${{ secrets.CI_SQLC_AUTH_TOKEN }}
         SQLC_AUTH_TOKEN: ${{ secrets.CI_SQLC_AUTH_TOKEN }}
+        CGO_ENABLED: ${{ matrix.cgo }}
 
   vuln_check:
     runs-on: ubuntu-latest
