run windows / mac on branch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,8 +14,8 @@ jobs:
         # https://github.com/orgs/community/discussions/26253#discussioncomment-6745038
         isMain: 
           - ${{ github.ref == 'refs/heads/main' }}
-        exclude:
-          - isMain: false
+        # exclude:
+        #   - isMain: false
         include:
           - os: ubuntu-latest
             cgo: '1'
