--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,13 +8,13 @@ jobs:
   test:
     strategy:
       matrix:
-        max-parallel: 2
+        # max-parallel: 2
         os: [ubuntu-latest, macos-latest, windows-latest]
         cgo: ['1', '0']
         # Workaround no native support for conditional matrix items
         # https://github.com/orgs/community/discussions/26253#discussioncomment-6745038
-        isMain: 
-          - ${{ github.ref == 'refs/heads/main' }}
+        # isMain:
+        #   - ${{ github.ref == 'refs/heads/main' }}
         # exclude:
         #   - isMain: false
         include:
