--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,20 +7,21 @@ on:
 jobs:
   test:
     strategy:
+      max-parallel: 2
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         cgo: ['1', '0']
         # Workaround no native support for conditional matrix items
         # https://github.com/orgs/community/discussions/26253#discussioncomment-6745038
-        isMain: 
+        isMain:
           - ${{ github.ref == 'refs/heads/main' }}
         exclude:
           - isMain: false
         include:
-          - os: ubuntu-latest
-            cgo: '1'
-          - os: ubuntu-latest
-            cgo: '0'
+        - os: ubuntu-latest
+          cgo: '1'
+        - os: ubuntu-latest
+          cgo: '0'
     name: test ${{ matrix.os }} cgo=${{ matrix.cgo }}
     runs-on: ${{ matrix.os }}
 
