--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,8 +20,8 @@ jobs:
         include:
         - os: windows-latest
           cgo: '0'
-        - os: ubuntu-latest
-          cgo: '0'
+        # - os: ubuntu-latest
+        #   cgo: '0'
     name: test ${{ matrix.os }} cgo=${{ matrix.cgo }}
     runs-on: ${{ matrix.os }}
 
