--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,10 @@ jobs:
         cgo: ['1', '0']
         # Workaround no native support for conditional matrix items
         # https://github.com/orgs/community/discussions/26253#discussioncomment-6745038
-        isMain:
-          - ${{ github.ref == 'refs/heads/main' }}
-        exclude:
-          - isMain: false
+        # isMain:
+        #   - ${{ github.ref == 'refs/heads/main' }}
+        # exclude:
+        #   - isMain: false
         include:
         - os: ubuntu-latest
           cgo: '1'
@@ -49,12 +49,15 @@ jobs:
       env:
         CGO_ENABLED: ${{ matrix.cgo }}
 
+    # Start a PostgreSQL server
+    - uses: ikalnytskyi/action-setup-postgres@v4
+
     - name: test ./...
       run: gotestsum --junitfile junit.xml -- --tags=examples -timeout 20m ./...
       env:
-        CI_SQLC_PROJECT_ID: ${{ secrets.CI_SQLC_PROJECT_ID }}
-        CI_SQLC_AUTH_TOKEN: ${{ secrets.CI_SQLC_AUTH_TOKEN }}
-        SQLC_AUTH_TOKEN: ${{ secrets.CI_SQLC_AUTH_TOKEN }}
+        # CI_SQLC_PROJECT_ID: ${{ secrets.CI_SQLC_PROJECT_ID }}
+        # CI_SQLC_AUTH_TOKEN: ${{ secrets.CI_SQLC_AUTH_TOKEN }}
+        # SQLC_AUTH_TOKEN: ${{ secrets.CI_SQLC_AUTH_TOKEN }}
         CGO_ENABLED: ${{ matrix.cgo }}
 
   vuln_check:
