--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,16 +38,16 @@ jobs:
     - name: install sqlc-gen-test
       run: go install github.com/sqlc-dev/sqlc-gen-test@v0.1.0
 
-    - name: install ./...
-      run: go install ./...
-      env:
-        CGO_ENABLED: ${{ matrix.cgo }}
+    # - name: install ./...
+    #   run: go install ./...
+    #   env:
+    #     CGO_ENABLED: ${{ matrix.cgo }}
 
-    - name: build internal/endtoend
-      run: go build ./...
-      working-directory: internal/endtoend/testdata
-      env:
-        CGO_ENABLED: ${{ matrix.cgo }}
+    # - name: build internal/endtoend
+    #   run: go build ./...
+    #   working-directory: internal/endtoend/testdata
+    #   env:
+    #     CGO_ENABLED: ${{ matrix.cgo }}
 
     # Start a PostgreSQL server
     - uses: sqlc-dev/action-setup-postgres@master
