--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,10 +38,10 @@ jobs:
     - name: install sqlc-gen-test
       run: go install github.com/sqlc-dev/sqlc-gen-test@v0.1.0
 
-    # - name: install ./...
-    #   run: go install ./...
-    #   env:
-    #     CGO_ENABLED: ${{ matrix.cgo }}
+    - name: install ./...
+      run: go install ./...
+      env:
+        CGO_ENABLED: ${{ matrix.cgo }}
 
     # - name: build internal/endtoend
     #   run: go build ./...
@@ -67,7 +67,7 @@ jobs:
         CI_SQLC_AUTH_TOKEN: ${{ secrets.CI_SQLC_AUTH_TOKEN }}
         SQLC_AUTH_TOKEN: ${{ secrets.CI_SQLC_AUTH_TOKEN }}
         MYSQL_SERVER_URI: root:@tcp(localhost:3306)/mysql?multiStatements=true&parseTime=true
-        POSTGRESQL_SERVER_URI: ${{ steps.postgres.outputs.connection-uri }}
+        POSTGRESQL_SERVER_URI: ${{ steps.postgres.outputs.connection-uri }}?sslmode=disable
         CGO_ENABLED: ${{ matrix.cgo }}
 
   vuln_check:
