--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,16 +7,15 @@ on:
 jobs:
   test:
     strategy:
-      # max-parallel: 2
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
         cgo: ['1', '0']
         # Workaround no native support for conditional matrix items
         # https://github.com/orgs/community/discussions/26253#discussioncomment-6745038
-        # isMain:
-        #   - ${{ github.ref == 'refs/heads/main' }}
-        # exclude:
-        #   - isMain: false
+        isMain:
+          - ${{ github.ref == 'refs/heads/main' }}
+        exclude:
+          - isMain: false
         include:
         - os: ubuntu-latest
           cgo: '1'
@@ -43,11 +42,11 @@ jobs:
       env:
         CGO_ENABLED: ${{ matrix.cgo }}
 
-    # - name: build internal/endtoend
-    #   run: go build ./...
-    #   working-directory: internal/endtoend/testdata
-    #   env:
-    #     CGO_ENABLED: ${{ matrix.cgo }}
+    - name: build internal/endtoend
+      run: go build ./...
+      working-directory: internal/endtoend/testdata
+      env:
+        CGO_ENABLED: ${{ matrix.cgo }}
 
     # Start a PostgreSQL server
     - uses: sqlc-dev/action-setup-postgres@master
