--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,8 @@ jobs:
     - uses: actions/checkout@v4
     - uses: actions/setup-go@v5
       with:
-        go-version-file: go.mod
-        check-latest: true
+        go-version: '1.21.9'
+        # go-version-file: go.mod
+        # check-latest: true
     - run: go install golang.org/x/vuln/cmd/govulncheck@latest
     - run: govulncheck ./...
