--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,9 +8,9 @@ jobs:
   test:
     strategy:
       matrix:
-        # Disabling windows builds while we figure out why they're broken
-        # os: [ubuntu-latest, macos-latest, windows-latest]
-        os: [ubuntu-latest, macos-latest]
+        # Disabling windows builds while we fix installing PostgreSQL 16
+        # os: [ubuntu-22.04, macos-14, windows-2022]
+        os: [ubuntu-22.04, macos-14]
         cgo: ['1', '0']
         # Workaround no native support for conditional matrix items
         # https://github.com/orgs/community/discussions/26253#discussioncomment-6745038
@@ -19,9 +19,9 @@ jobs:
         exclude:
           - isMain: false
         include:
-        - os: ubuntu-latest
+        - os: ubuntu-22.04
           cgo: '1'
-        - os: ubuntu-latest
+        - os: ubuntu-22.04
           cgo: '0'
     name: test ${{ matrix.os }} cgo=${{ matrix.cgo }}
     runs-on: ${{ matrix.os }}
@@ -30,7 +30,7 @@ jobs:
     - uses: actions/checkout@v4
     - uses: actions/setup-go@v5
       with:
-        go-version: '1.22.8'
+        go-version: '1.23.5'
 
     - name: install gotestsum
       run: go install gotest.tools/gotestsum@latest
@@ -71,13 +71,13 @@ jobs:
         CGO_ENABLED: ${{ matrix.cgo }}
 
   vuln_check:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     timeout-minutes: 5
 
     steps:
     - uses: actions/checkout@v4
     - uses: actions/setup-go@v5
       with:
-        go-version: '1.22.8'
+        go-version: '1.23.5'
     - run: go install golang.org/x/vuln/cmd/govulncheck@latest
     - run: govulncheck ./...
