Initial YDB support: SELECT logic, some convert tests, and YDB engine integration
- Added reserved keywords and parsing logic
- CREATE TABLE support and tests
- SELECT initial support and tests
- Initial YDB engine integration and examples

--- a/examples/authors/sqlc.yaml
+++ b/examples/authors/sqlc.yaml
@@ -43,6 +43,16 @@ sql:
     go:
       package: authors
       out: sqlite
+- name: ydb
+  schema: ydb/schema.sql
+  queries: ydb/query.sql
+  engine: ydb
+  gen:
+    go:
+      package: authors
+      out: ydb
+
+
 rules:
 - name: postgresql-query-too-costly
   message: "Too costly"
