--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,20 +9,19 @@ jobs:
     strategy:
       matrix:
         # Disabling windows builds while we fix installing PostgreSQL 16
-        # os: [ubuntu-22.04, macos-14, windows-2022]
-        os: [ubuntu-22.04, macos-15]
+        os: [ubuntu-22.04, macos-14, windows-2022]
         cgo: ['1', '0']
         # Workaround no native support for conditional matrix items
         # https://github.com/orgs/community/discussions/26253#discussioncomment-6745038
-        isMain:
-          - ${{ github.ref == 'refs/heads/main' }}
-        exclude:
-          - isMain: false
-        include:
-        - os: ubuntu-22.04
-          cgo: '1'
-        - os: ubuntu-22.04
-          cgo: '0'
+        # isMain:
+        #   - ${{ github.ref == 'refs/heads/main' }}
+        # exclude:
+        #   - isMain: false
+        # include:
+        # - os: ubuntu-22.04
+        #   cgo: '1'
+        # - os: ubuntu-22.04
+        #   cgo: '0'
     name: test ${{ matrix.os }} cgo=${{ matrix.cgo }}
     runs-on: ${{ matrix.os }}
 
@@ -52,25 +51,12 @@ jobs:
       env:
         CGO_ENABLED: ${{ matrix.cgo }}
 
-    # Start a PostgreSQL server
-    # - uses: sqlc-dev/action-setup-postgres@master
-    #   with:
-    #     postgres-version: "16"
-    #   id: postgres
-
-    # Start a MySQL server
-    # - uses: shogo82148/actions-setup-mysql@v1
-    #   with:
-    #     mysql-version: "9.0"
-
     - name: test ./...
       run: gotestsum --junitfile junit.xml -- --tags=examples -timeout 20m ./...
       env:
         CI_SQLC_PROJECT_ID: ${{ secrets.CI_SQLC_PROJECT_ID }}
         CI_SQLC_AUTH_TOKEN: ${{ secrets.CI_SQLC_AUTH_TOKEN }}
         SQLC_AUTH_TOKEN: ${{ secrets.CI_SQLC_AUTH_TOKEN }}
-        # MYSQL_SERVER_URI: root:@tcp(localhost:3306)/mysql?multiStatements=true&parseTime=true
-        # POSTGRESQL_SERVER_URI: ${{ steps.postgres.outputs.connection-uri }}?sslmode=disable
         CGO_ENABLED: ${{ matrix.cgo }}
 
   vuln_check:
