Only run tests on Linux

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,8 +9,8 @@ jobs:
     strategy:
       matrix:
         # Disabling windows builds while we fix installing PostgreSQL 16
-        os: [ubuntu-24.04, macos-14, windows-2022]
-        cgo: ['1', '0']
+        # os: [ubuntu-24.04, macos-14, windows-2022]
+        os: [ubuntu-24.04]
         # Workaround no native support for conditional matrix items
         # https://github.com/orgs/community/discussions/26253#discussioncomment-6745038
         # isMain:
@@ -19,10 +19,7 @@ jobs:
         #   - isMain: false
         # include:
         # - os: ubuntu-24.04
-        #   cgo: '1'
-        # - os: ubuntu-24.04
-        #   cgo: '0'
-    name: test ${{ matrix.os }} cgo=${{ matrix.cgo }}
+    name: test ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -43,13 +40,13 @@ jobs:
     - name: install ./...
       run: go install ./...
       env:
-        CGO_ENABLED: ${{ matrix.cgo }}
+        CGO_ENABLED: "0"
 
     - name: build internal/endtoend
       run: go build ./...
       working-directory: internal/endtoend/testdata
       env:
-        CGO_ENABLED: ${{ matrix.cgo }}
+        CGO_ENABLED: "0"
 
     - name: test ./...
       run: gotestsum --junitfile junit.xml -- --tags=examples -timeout 20m ./...
@@ -58,7 +55,7 @@ jobs:
         CI_SQLC_PROJECT_ID: ${{ secrets.CI_SQLC_PROJECT_ID }}
         CI_SQLC_AUTH_TOKEN: ${{ secrets.CI_SQLC_AUTH_TOKEN }}
         SQLC_AUTH_TOKEN: ${{ secrets.CI_SQLC_AUTH_TOKEN }}
-        CGO_ENABLED: ${{ matrix.cgo }}
+        CGO_ENABLED: "0"
 
   vuln_check:
     runs-on: ubuntu-24.04
