--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,23 +5,25 @@ on:
       - main
   pull_request:
 jobs:
-  test:
+  build:
     strategy:
       matrix:
-        # Disabling windows builds while we fix installing PostgreSQL 16
-        # os: [ubuntu-24.04, macos-14, windows-2022]
-        os: [ubuntu-24.04]
-        # Workaround no native support for conditional matrix items
-        # https://github.com/orgs/community/discussions/26253#discussioncomment-6745038
-        # isMain:
-        #   - ${{ github.ref == 'refs/heads/main' }}
-        # exclude:
-        #   - isMain: false
-        # include:
-        # - os: ubuntu-24.04
-    name: test ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-
+        goos: [darwin, linux, windows]
+        goarch: [amd64, arm64]
+    name: build ${{ matrix.goos }}/${{ matrix.goarch }}
+    runs-on: ubuntu-24.04
+    steps:
+    - uses: actions/checkout@v5
+    - uses: actions/setup-go@v5
+      with:
+        go-version: '1.25.0'
+    - run: go build ./...
+      env:
+        CGO_ENABLED: "0"
+        GOOS: ${{ matrix.goos }}
+        GOARCH: ${{ matrix.goarch }}
+  test:
+    runs-on: ubuntu-24.04
     steps:
     - uses: actions/checkout@v5
     - uses: actions/setup-go@v5
