--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,8 +27,10 @@ services:
       - "2136:2136"
       - "8765:8765"
     restart: always
+    hostname: localhost
     environment:
       - YDB_USE_IN_MEMORY_PDISKS=true
       - GRPC_TLS_PORT=2135
       - GRPC_PORT=2136
       - MON_PORT=8765
+      
